objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ABA_Hosted_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We are covering 100% of the planning and costs to run the event. If so, check the box.</description>
        <inlineHelpText>We are covering 100% of the planning and costs to run the event. If so, check the box.</inlineHelpText>
        <label>ABA Hosted Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ABA_Point_of_Contact__c</fullName>
        <inlineHelpText>Who is the point of contact for the affiliate</inlineHelpText>
        <label>ABA Point of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amy Kasprzyk</fullName>
                </value>
                <value>
                    <fullName>Deborah Lewis</fullName>
                </value>
                <value>
                    <fullName>Denise DeVoe</fullName>
                </value>
                <value>
                    <fullName>GiGi Crawford</fullName>
                </value>
                <value>
                    <fullName>Jennifer Guanlao</fullName>
                </value>
                <value>
                    <fullName>Jessica Price</fullName>
                </value>
                <value>
                    <fullName>Patti Peery</fullName>
                </value>
                <value>
                    <fullName>Susan Nicholas</fullName>
                </value>
                <value>
                    <fullName>Valerie Gabriel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ClientReferralCampaign</relationshipLabel>
        <relationshipName>ClientReferralCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_to_Mail_Payment__c</fullName>
        <inlineHelpText>Address to mail payments for marketing fees</inlineHelpText>
        <label>Address to Mail Payment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ads_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ads Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Address__c</fullName>
        <label>Affiliate Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affiliate_Name__c</fullName>
        <label>Name of Affiliate Main Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Notes__c</fullName>
        <description>Notes about affiliate</description>
        <label>Affiliate Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affiliate_Payment_Type__c</fullName>
        <label>Affiliate Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate_Percentage__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Percentage paid to Affiliates</description>
        <label>Affiliate Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agreement_Executed__c</fullName>
        <inlineHelpText>The date of the agreement being signed by both parties.</inlineHelpText>
        <label>Agreement Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Air_Confirmation__c</fullName>
        <inlineHelpText>Airline Confirmation Code</inlineHelpText>
        <label>Air Conf #</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anderson_Staff__c</fullName>
        <inlineHelpText>Select the staff that attended the event</inlineHelpText>
        <label>Anderson Staff</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Al Caiazza</fullName>
                </value>
                <value>
                    <fullName>Amy Kaspryzk</fullName>
                </value>
                <value>
                    <fullName>Bob Wilkinson</fullName>
                </value>
                <value>
                    <fullName>Brian Bowman</fullName>
                </value>
                <value>
                    <fullName>Carl Zoellner</fullName>
                </value>
                <value>
                    <fullName>Clint Coons</fullName>
                </value>
                <value>
                    <fullName>Corey Posgay</fullName>
                </value>
                <value>
                    <fullName>Deborah Lewis</fullName>
                </value>
                <value>
                    <fullName>Denise DeVoe</fullName>
                </value>
                <value>
                    <fullName>Doug Schaumburg</fullName>
                </value>
                <value>
                    <fullName>Jennifer Guanlao</fullName>
                </value>
                <value>
                    <fullName>Jessica Price</fullName>
                </value>
                <value>
                    <fullName>Josh Terry</fullName>
                </value>
                <value>
                    <fullName>Kelly Allison</fullName>
                </value>
                <value>
                    <fullName>Kendall O&apos;Leary</fullName>
                </value>
                <value>
                    <fullName>Matthew Moore</fullName>
                </value>
                <value>
                    <fullName>Michael Hackler</fullName>
                </value>
                <value>
                    <fullName>Michelle Merritt</fullName>
                </value>
                <value>
                    <fullName>Mike Bowman</fullName>
                </value>
                <value>
                    <fullName>Mike Tracey</fullName>
                </value>
                <value>
                    <fullName>Patricia Peery</fullName>
                </value>
                <value>
                    <fullName>Ricardo Gonzalez</fullName>
                </value>
                <value>
                    <fullName>Seth Perlman</fullName>
                </value>
                <value>
                    <fullName>Shaena Aguilar</fullName>
                </value>
                <value>
                    <fullName>Shane Broyard</fullName>
                </value>
                <value>
                    <fullName>Susan Nicholas</fullName>
                </value>
                <value>
                    <fullName>Terrance Redmond</fullName>
                </value>
                <value>
                    <fullName>Terry Hazelett</fullName>
                </value>
                <value>
                    <fullName>Toby Mathis</fullName>
                </value>
                <value>
                    <fullName>Valerie Gabriel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autoresponder_Workflow__c</fullName>
        <label>Autoresponder Workflow</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ballroom_Name__c</fullName>
        <label>Ballroom Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booked_By__c</fullName>
        <label>Booked By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bulletproof_External_Link__c</fullName>
        <label>Bulletproof External Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bulletproof_External__c</fullName>
        <formula>&quot;https://andersonadvisors.com/bulletproof/?tfa_2343=&quot;+IF(ISBLANK(TEXT(Main_Lead_Source__c)), &quot;Affiliate&quot;, SUBSTITUTE(TEXT(Main_Lead_Source__c), &quot; &quot;, &quot;%20&quot;))+&quot;&amp;tfa_2270=&quot;+Id+&quot;&amp;tfa_2274=&quot;+SUBSTITUTE(Name, &quot; &quot;, &quot;%20&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulletproof External</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulletproof_Hyperterminal__c</fullName>
        <formula>&quot;https://andersonadvisors.com/bulletproof/?internal&amp;tfa_2343=&quot;+IF(ISBLANK(TEXT(Main_Lead_Source__c)), &quot;Affiliate&quot;, SUBSTITUTE(TEXT(Main_Lead_Source__c), &quot; &quot;, &quot;%20&quot;))+&quot;&amp;tfa_2270=&quot;+Id+&quot;&amp;tfa_2274=&quot;+SUBSTITUTE(Name, &quot; &quot;, &quot;%20&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Important - this link is for the default BP offer only. Any changes will need to be done manually (free, no SS, add platinum) in the form dropdown options.</inlineHelpText>
        <label>Bulletproof Hyperterminal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulletproof_Lead_Consult__c</fullName>
        <formula>&quot;https://www.tfaforms.com/4753830&amp;tfa_7=Affiliate&amp;tfa_8=&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulletproof Lead Consult</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_units__c</fullName>
        <description>Primary Clients Only that are registered status</description>
        <label>Primary Registered</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>contains</operation>
            <value>Registered, Registered Them</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Check_Payments_Made_Out_To__c</fullName>
        <inlineHelpText>Who the affiliate marketing checks are made to - the name of the company or individual.</inlineHelpText>
        <label>Check Payments Made Out To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Payout__c</fullName>
        <description>Commission Payout Percentage</description>
        <inlineHelpText>Commission Payout Percentage</inlineHelpText>
        <label>Commission Payout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Join_Link__c</fullName>
        <label>Direct Join Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EventBrite_All_Guests__c</fullName>
        <inlineHelpText>Count of all Campaign Members labeled as Guest from EventBrite</inlineHelpText>
        <label>EventBrite All Guests</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary_or_Guest__c</field>
            <operation>equals</operation>
            <value>Guest</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EventBrite_All_Primary__c</fullName>
        <inlineHelpText>Count of all Campaign Members labeled as Primary from EventBrite</inlineHelpText>
        <label>EventBrite All Primary</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary_or_Guest__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EventBrite_All_Total__c</fullName>
        <formula>EventBrite_All_Primary__c +  EventBrite_All_Guests__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all Campaign Members labeled as Primary or Guest from EventBrite</inlineHelpText>
        <label>EventBrite All Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventBrite_Confirmed_Guest__c</fullName>
        <inlineHelpText>Count of all Campaign Members labeled as Guest and Confirmed from EventBrite</inlineHelpText>
        <label>EventBrite Confirmed Guest</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary_or_Guest__c</field>
            <operation>equals</operation>
            <value>Guest</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.EventBright_Member_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EventBrite_Confirmed_Primary__c</fullName>
        <inlineHelpText>Count of all Campaign Members labeled as Primary and Confirmed from EventBrite</inlineHelpText>
        <label>EventBrite Confirmed Primary</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary_or_Guest__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.EventBright_Member_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EventBrite_Confirmed_Registered_Guest__c</fullName>
        <inlineHelpText>Count of all Campaign Members labeled as Guest and Confirmed or Registered from EventBrite</inlineHelpText>
        <label>EventBrite Confirmed/Registered Guest</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary_or_Guest__c</field>
            <operation>equals</operation>
            <value>Guest</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.EventBright_Member_Status__c</field>
            <operation>equals</operation>
            <value>Registered, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EventBrite_Confirmed_Registered_Primary__c</fullName>
        <inlineHelpText>Count of all Campaign Members labeled as Primary and Confirmed or Registered from EventBrite</inlineHelpText>
        <label>EventBrite Confirmed/Registered Primary</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary_or_Guest__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.EventBright_Member_Status__c</field>
            <operation>equals</operation>
            <value>Registered, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EventBrite_Confirmed_Registered_Total__c</fullName>
        <formula>EventBrite_Confirmed_Registered_Guest__c +  EventBrite_Confirmed_Registered_Primary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EventBrite Confirmed/Registered Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventBrite_Confirmed_Total__c</fullName>
        <formula>EventBrite_Confirmed_Primary__c +  EventBrite_Confirmed_Guest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EventBrite Confirmed Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <description>Date the event is over.</description>
        <inlineHelpText>Date the event is over.</inlineHelpText>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Format__c</fullName>
        <label>Event Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live Event</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Live_online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Live online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Venue Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Notes__c</fullName>
        <label>Event Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Pricing__c</fullName>
        <inlineHelpText>Cost to register for the event for a primary guest</inlineHelpText>
        <label>Event Pricing</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Registration_URL__c</fullName>
        <inlineHelpText>Link to the registration page</inlineHelpText>
        <label>Event Registration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ABA/Affiliate</fullName>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Affiliate/Speaking</fullName>
                </value>
                <value>
                    <fullName>In House</fullName>
                </value>
                <value>
                    <fullName>Speaking</fullName>
                </value>
                <value>
                    <fullName>Table</fullName>
                </value>
                <value>
                    <fullName>Table/Speaking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facebook_Event_Link__c</fullName>
        <inlineHelpText>Emails sent to help promote the event or offer.</inlineHelpText>
        <label>Facebook Event Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flyer_Link__c</fullName>
        <label>Flyer Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gateway_URL__c</fullName>
        <label>Gateway URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Guest_Attended__c</fullName>
        <description>Guests Only &amp; Status Attended</description>
        <inlineHelpText>Guests Only &amp; Status Attended</inlineHelpText>
        <label>Guest Attended</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Guest_Canceled__c</fullName>
        <description>Guest Only &amp; Status Canceled</description>
        <inlineHelpText>Guest Only &amp; Status Canceled</inlineHelpText>
        <label>Guest Canceled</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Guest_Confirmed__c</fullName>
        <description>Guests Only &amp; Status Confirmed</description>
        <inlineHelpText>Guests Only &amp; Status Confirmed</inlineHelpText>
        <label>Guest Confirmed</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Confirmed, Hard Confirm, Hard Confirmation</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Guest_Registered__c</fullName>
        <description>Guest Only &amp; Status Registered</description>
        <inlineHelpText>Guest Only &amp; Status Registered</inlineHelpText>
        <label>Guest Registered</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Registered, Registered Them</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Guests__c</fullName>
        <description>Guests that have any status but Canceled or Attended</description>
        <label>Guests</label>
        <summaryFilterItems>
            <field>CampaignMember.Primary__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hard_Confirmed_Buying_Units__c</fullName>
        <formula>Special_Event__r.Total_Hard_Confirmed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hard Confirmed Buying Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hard_Confirmed_Guests__c</fullName>
        <formula>Special_Event__r.Total_Guest_Hard_Confirmed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hard Confirmed Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel_Confirmation_Partner_Room__c</fullName>
        <label>Hotel Confirmation &amp; Partner Room</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <inlineHelpText>Initials</inlineHelpText>
        <label>Hotel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Event has offer that Anderson will be fulfilling. Used to trigger automation.</inlineHelpText>
        <label>Internal Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://andersonadvisors.my.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Livestream_Password__c</fullName>
        <label>Livestream/Webinar Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Affiliate_Email__c</fullName>
        <label>Main Affiliate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Main_Affiliate_Phone__c</fullName>
        <label>Main Affiliate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Main_Lead_Source__c</fullName>
        <label>Main Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Main_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <label>Marketing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Airline_Airline_Conf_Booked__c</fullName>
        <label>Name, Airline, Airline Conf #, &amp; Booked</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_HotelTravel__c</fullName>
        <label>Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Need_OO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this offer needs to generate OO&apos;s. This campaign will be selected as the sale campaign.</inlineHelpText>
        <label>Need OO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>Total number of workshop attendees</description>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Link_2__c</fullName>
        <inlineHelpText>Website URL #2 for any offer presented</inlineHelpText>
        <label>Offer Link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Offer_Link_3__c</fullName>
        <label>Offer Link 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Offer_Link__c</fullName>
        <inlineHelpText>Website URL for any offer presented</inlineHelpText>
        <label>Offer Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_18_Chars__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Opportunity ID (18 Chars)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originated_by__c</fullName>
        <description>Who originally developed the relationship and got the affiliate agreement signed.</description>
        <inlineHelpText>Who originally developed the relationship and got the affiliate agreement signed.</inlineHelpText>
        <label>Originated by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clint Coons</fullName>
                </value>
                <value>
                    <fullName>Toby Mathis</fullName>
                </value>
                <value>
                    <fullName>Michael Bowman</fullName>
                </value>
                <value>
                    <fullName>Denise DeVoe</fullName>
                </value>
                <value>
                    <fullName>David Gass</fullName>
                </value>
                <value>
                    <fullName>Existing Affiliate</fullName>
                </value>
                <value>
                    <fullName>Amy Kaspryzk</fullName>
                </value>
                <value>
                    <fullName>Emily Schumann</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Names_for_Affiliate__c</fullName>
        <inlineHelpText>Other names the affiliate is known by or names of events they run.</inlineHelpText>
        <label>Other Names for Affiliate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overview_of_Offers__c</fullName>
        <inlineHelpText>What offers and/or events are we doing with the affiliate. What are the main offers.</inlineHelpText>
        <label>Overview of Offers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign__c</fullName>
        <formula>IF(ISBLANK(ParentId), Name,
IF(ISBLANK(Parent.ParentId), Parent.Name,
IF(ISBLANK(Parent.Parent.ParentId), Parent.Parent.Name,
IF(ISBLANK(Parent.Parent.Parent.ParentId), Parent.Parent.Parent.Name,
IF(ISBLANK(Parent.Parent.Parent.Parent.ParentId), Parent.Parent.Parent.Parent.Name,
NULL
)))))</formula>
        <label>Parent Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Information__c</fullName>
        <label>Parking Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parnter_Affiliate_Email__c</fullName>
        <label>Parnter Affiliate Email</label>
        <type>Email</type>
    </fields>
</CustomObject>